bugfix: overflow wiht quote

--- a/main.css
+++ b/main.css
@@ -408,7 +408,8 @@ header {
 .blockquote-wrapper {
   display: flex;
   height: max-content;
-  max-width: 800px;
+  max-width: max-content;
+  padding: 20px;
 }
 
 /* Blockquote main style */
@@ -418,10 +419,12 @@ header {
    font-family: 'Playfair Display', serif;
    line-height: 1.5;
    min-width: 300px;
-   max-width: 800px;
+   max-width: 900px;
    margin: 80px auto 40px auto;
    align-self: center;
    height: 100%;
+   overflow: hidden;
+   padding: 70px 0;
 }
 
 /* Blockquote header */
@@ -436,7 +439,6 @@ header {
    margin: 0;
    z-index: 1;
    text-transform: uppercase;
-   font-family: var(--font-primary);
    font-weight: 700;
 }
 
@@ -445,8 +447,8 @@ header {
    content:"’";
    position: absolute;
    top: 0;
-    right: -200px;
-   font-size: 80rem;
+   right: -25px;
+   font-size: 60rem;
    line-height: 0.7;
    color:  rgba(95, 34, 217, 0.5);
    text-shadow: -3rem -3rem 0 rgba(95, 34, 217, 0.2);
@@ -733,7 +735,7 @@ header {
 .slider-container {
   margin: 20px;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 h2 {
